fix white space on footer

--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -93,7 +93,7 @@
 
 .footer-container {
   width: 100%;
-  min-height: 30vh;
+  min-height: 50vh;
   background-size: 100% 100%;
   background-image: url("/public/images/footerBg.png");
   color: var(--white);
